--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rvm:
 - 2.3.0
 
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+ - chmod +x ./script/* # or do this locally and commit
+
 install: script/bootstrap
 
 # Assume bundler is being used, therefore
