--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,24 +1,24 @@
-- name: Pricing
-  link: /pricing/
+- name: About Us
+  link: /about/
+  new_window: false
+  highlight: false
+- name: Products
+  link: /products/
   new_window: false
   highlight: false
 - name: Blog
   link: /blog/
   new_window: false
   highlight: false
-- name: About
-  link: /about/
+- name: Our Team
+  link: /people/
   new_window: false
   highlight: false
 - name: Contact
   link: /contact/
   new_window: false
   highlight: false
-- name: Login
-  link: /
+- name: Careers
+  link: /careers/
   new_window: true
   highlight: false
-- name: Sign Up
-  link: /
-  new_window: true
-  highlight: true
