--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -9,7 +9,7 @@
   - name: Blog
     link: /blog/
   - name: Careers
-    link: /career/
+    link: /careers/
 - links:
   - name: Twitter
     link: https://twitter.com/GokulamBioTech
