--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ social:
 collections:
   staff_members:
     _hide_content: true
-  products_info:
+  products:
+    output: true
     _hide_content: true
 
 paginate: 10
@@ -58,6 +59,7 @@ defaults:
       path: ""
       type: "products_info"
     values:
+      layout: "page"
       _options:
         image_path:
           width: 600
