--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: GokulamBioTech
 url: "https://gokulambiotech.github.io/"
 baseurl:
-google_analytics_key: googlec219439fed19fd3d.html
+google_analytics_key: UA-109863125-1
 google_maps_javascript_api_key:
 disqus_shortname:
 
