--- a/_config.yml
+++ b/_config.yml
@@ -5,20 +5,21 @@ title: GokulamBioTech
 url: "https://gokulambiotech.github.io/"
 baseurl:
 google_analytics_key: UA-109863125-1
-google_maps_javascript_api_key:
-disqus_shortname:
+google_maps_javascript_api_key: AIzaSyDMYXq0MRHwat44vONYkjsy6e91JHTlfWI
+disqus_shortname: https-gokulambiotech-github-io
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /Gokulamlogo.png
 description: Gokulam BioTech
 author:
-  name: Prabhakaran Kasinathan
-  email: prabhakaran1989@gmail.combined
+  name: Dr. Gopinath Ramachandran
+  email: crk53kris@gmail.com
   twitter: GokulamBioTech
 social:
-  name: SocialBioTech
+  name: Gokulam Biotech
   links:
     - "https://gokulambiotech.github.io/"
+    - "http://gokulambiotech.blogspot.de/p/contact-us.html"
 
 # -----
 # Build new folders and content
