--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,7 @@ collections:
     _hide_content: true
   products:
     output: true
-    _hide_content: false
-
-
+    _hide_content: true
 
 paginate: 10
 paginate_path: "/blog/:num/:year/:title"
