--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -15,6 +15,11 @@
     link: https://twitter.com/GokulamBioTech
     social_icon: Twitter
     new_window: true
+- links:
+  - name: Facebook
+    link: https://fb.me/gokulambiotec
+    social_icon: Facebook
+    new_window: true
   - name: Google Plus
     link: https://plus.google.com/104781604888202490764
     social_icon: YouTube
