--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: GokulamBioTech
-url: "https://gokulambiotech.github.io/"
+url: "https://gokulambiotech.com/"
 baseurl:
 google_analytics_key: UA-109863125-1
 google_maps_javascript_api_key: AIzaSyDMYXq0MRHwat44vONYkjsy6e91JHTlfWI
