--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname: https-gokulambiotech-github-io
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /Gokulamlogo.png
-description: Gokulam BioTech
+description: Gokulam Biotech - India Farming Biotechnology Producer - Biofertilizer - Organic farming
 author:
   name: Dr. Gopinath Ramachandran
   email: gokulambiotech@gmail.com
