--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -10,16 +10,18 @@
     link: /blog/
   - name: Careers
     link: /careers/
+  - name: Certifications
+    link: /certifications/
 - links:
   - name: Twitter
     link: https://twitter.com/GokulamBioTech
     social_icon: Twitter
     new_window: true
-- links:
   - name: Facebook
     link: https://fb.me/gokulambiotec
     social_icon: Facebook
     new_window: true
+- links:
   - name: Google Plus
     link: https://plus.google.com/104781604888202490764
     social_icon: YouTube
