--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,19 +31,19 @@
       url:  /products/pesticide/
       shortdescription: Enhancers xxx
       image_path: /images/krish-logo.jpg
+- name: Certifications
+  link: /certifications/
+  new_window: false
+  highlight: false
 - name: Blog
   link: /blog/
   new_window: false
-  highlight: false
+  highlight: false  
 - name: Our Team
   link: /people/
   new_window: false
   highlight: false
 - name: Contact
   link: /contact/
-  new_window: false
-  highlight: false
-- name: Careers
-  link: /careers/
   new_window: false
   highlight: false
