google verification done

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_analytics_key: UA-109863125-1
 google_maps_javascript_api_key: AIzaSyDMYXq0MRHwat44vONYkjsy6e91JHTlfWI
 disqus_shortname: https-gokulambiotech-github-io
 
-permalink: /googlec219439fed19fd3d.html
+permalink: /googleb943882500ad3488.html
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /Gokulamlogo.png
 description: Gokulam Biotech - India Farming Biotechnology Producer - Biofertilizer - Organic farming
