--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ collections:
   products:
     output: true
     _hide_content: true
+  certifications:
+    output: true
+    _hide_content: true  
 
 paginate: 10
 paginate_path: "/blog/:num/:year/:title"
@@ -99,7 +102,7 @@ defaults:
     scope:
       path: "certifications.html"
     values:
-      layout: "default"
+      layout: "page"
       full_width: false
 
 jekyll-archives:
