--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ disqus_shortname: https-gokulambiotech-github-io
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /Gokulamlogo.png
-description: Gokulam Biotech - Organic Farming - Biotechnology Producer - Biofertilizer - Organic farming
+description: Organic Farming - Research and Development - Biotechnology Agricultural Producer - India
 author:
   name: Dr. Gopinath Ramachandran
   email: gokulambiotech@gmail.com
