--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -18,7 +18,7 @@
     social_icon: Twitter
     new_window: true
   - name: Facebook
-    link: https://fb.me/gokulambiotec
+    link: https://fb.me/gokulambiotecpondy
     social_icon: Facebook
     new_window: true
 - links:
