--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -27,6 +27,6 @@
     social_icon: YouTube
     new_window: true
   - name: RSS
-    link: https://feeds.feedburner.com/Gokulambiotech
+    link: /feed.xml
     social_icon: RSS
     new_window: true
