--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://gokulambiotech.com"
 baseurl:
 google_analytics_key: UA-109863125-1
 google_maps_javascript_api_key: AIzaSyDMYXq0MRHwat44vONYkjsy6e91JHTlfWI
-disqus_shortname: gokulambiotech.disqus.com
+disqus_shortname: gokulambiotech
 
 # Google verification Links
 
