tested the website, added installation instructions

--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,10 @@ exclude:
   - Gemfile.lock
   - README.md
   - LICENCE
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
 
 social_icons:
   - Twitter
