--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ install: script/bootstrap
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script:
+    - ./script/cibuild
+    - bash <(curl -s https://raw.githubusercontent.com/zricethezav/gitleaks-ci/master/gitleaks.sh)
 
 # branch whitelist, only for GitHub Pages
 branches:
