--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,11 @@ defaults:
         image_path:
           width: 100
           height: 100
-
+  -
+    scope:
+      path: "shop.html"
+    values:
+      layout: "default"
   -
     scope:
       path: "contact"
